<resources>
    <string name="app_name">Parking Control</string>

    <!-- Pantalla de inicio de sesión -->
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="clave_usuario">Contraseña</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="bienvenido">Bienvenido a Parking Control</string>
    <string name="inicia_sesion">Inicia sesión para empezar</string>
    <string name="recordarme">Recordarme</string>
    <string name="completar_login">Debe completar el nombre de usuario y la contraseña.</string>
    <string name="parqueos">Parqueos</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
