<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nextu.sacc.evaluacionfinal_modulo7.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inicia_sesion" />

    <ImageView
        android:layout_width="145dp"
        android:layout_height="150dp"
        android:layout_weight="match_parent"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_usuario"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clave_usuario"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/clave_usuario"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_recordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordarme"
        android:layout_gravity="left"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/inicio_sesion"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:onClick="onClickInicioSesion"/>

</LinearLayout>

